Resistor animation added, Readme updated, some other modifications

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -18,6 +18,20 @@ $custom-theme-colors : (
     "pink1": #e26584,
     "pink2": #f19db2,
     "pink3": #b3a3b5,
+
+    //Resistors colors:
+    "Black": #000000,
+    "Brown": #984806,
+    "red": #fc0b0b,
+    "Orange": #fa730c,
+    "Yellow": #ffff00,
+    "Green": #0dfb0d,
+    "Blue": #3690ff,
+    "Violet": #8a37ca,
+    "Grey": #7c7a7a,
+    "White": #f1f7f8,
+    "Gold": #e4b711,
+    "Silver": #c5bd95,
 );
 
 // Merging the custom color maps
